--- a/2. CSS/2.19 UltraEdge website using grids- challenge 7/index.html
+++ b/2. CSS/2.19 UltraEdge website using grids- challenge 7/index.html
@@ -56,6 +56,7 @@
             display: grid;
             justify-content: center;
             /* padding: 10px; */
+            /* align-items: center; */
             border: 2px solid rgb(241, 238, 238);
         }
         .heading{
@@ -65,7 +66,18 @@
             border: 1px solid black;
             border-radius: 3px;
         }
-
+        a{
+            color: black;
+        }
+        
+        @media screen and (max-width: 400px) {
+        .main {
+            justify-content: center;
+            align-items: center;
+            align-content: center;
+            grid-template-columns: 300px;
+        }
+    }
     </style>
 </head>
 
@@ -98,10 +110,8 @@
         <h3> English </h3>
         <nav style="visibility: hidden;">ok </nav>
     </div>
-    <div class="options">
-        <button style="background-color: rgb(31, 130, 243); padding: 5px; margin: 5px;">Download 32-bit</button>
-        <button style="background-color: rgb(31, 243, 84); padding: 5px; margin: 5px;">Download 64-bit</button>
-    </div>
+        <button style="background-color: rgb(31, 130, 243); padding: 5px; margin: 5px;"> <a href="https://www.ultraedit.com/">Download 32-bit</a></button>
+        <button style="background-color: rgb(31, 243, 84); padding: 5px; margin: 5px;"> <a href="https://www.ultraedit.com/">Download 63-bit</a></button>
 </div>
 
 <div class="box">
